<resources>
    <string name="app_name">Lets\'a go!</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="test_text">Test</string>
    <string name="user_already_registered_error">Пользователь с таким ником уже зарегистрирован!</string>
    <string name="invalid_credentials_error">Неправильные логин или пароль!</string>
    <string name="enter_your_basic_info_title">Введите свои параметры</string>
    <string name="skip_button">Пропустить</string>
    <string name="next_button">Далее</string>
    <string name="age_hint">Возраст</string>
    <string name="height_hint">Рост</string>
    <string name="weight_hint">Вес</string>
    <string name="name_hint">Имя</string>
    <string name="log_out_button">Выйти из аккаунта</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="search_illness_hint">Введите название болезни</string>
    <string name="content_description">Icon</string>
    <string name="edit_button">Редактировать</string>
    <string name="enter_details_title">Пожалуйста, заполните данные о своём здоровье, чтобы мы могли подобрать подходящие для вас маршруты</string>
    <string name="fill_button">Заполнить</string>
    <string name="icon">icon</string>
    <string name="new_route_title">Новый маршрут</string>
    <string name="route_type_title">Тип</string>
    <string name="route_name_hint">Название</string>
    <string name="ground_type_hint">Покрытие</string>
    <string name="ground_asphalt">Земля</string>
    <string name="ground_track">Асфальт</string>
    <string name="switch_public_hint">Опубликовать</string>
    <string name="save_button">Сохранить</string>
    <string name="ok_button">ОК</string>
    <string name="invalid_email_title">Пользователя с таким e-mail не существует</string>
    <string name="invalid_email_message">Попробуйте ещё раз</string>
    <string name="invalid_password_title">Неправильный пароль</string>
    <string name="invalid_password_message">Попробуйте ещё раз</string>
    <string name="login_hint">Войдите в приложение</string>
    <string name="min_password_characters_error_title">Пароль должен содержать не менее 8 символов и букв</string>
    <string name="user_already_registered_title">Пользователь с таким email уже зарегистрирован</string>
    <string name="user_already_registered_message">Войдите в приложение или зарегистрируйте нового пользователя</string>
    <string name="user_details_title">Профиль</string>
    <string name="age_key">Возраст</string>
    <string name="height_key">Рост</string>
    <string name="weight_key">Вес</string>
    <string name="cm">см.</string>
    <string name="kg">кг.</string>
    <string name="birth_date_hint">Дата рождения</string>
    <string name="register_title">Регистрация</string>
    <string name="basic_info_title">Заполните данные о себе</string>
    <string name="cancel_button">ОТМЕНА</string>
    <string name="height_picker_title">Укажите свой рост (см.)</string>
    <string name="cm_value">%d см.</string>
    <string name="weight_value">%d кг.</string>
    <string name="weight_picker_title">Укажите свой вес (кг.)</string>
    <string name="update_filter_title">Обновить рекомендации?</string>
    <string name="update_filter_message">Мы обновим рекомендации в соответствии с новыми данными о вашем здоровье</string>
    <string name="yes_button">ДА</string>
    <string name="no_button">НЕТ</string>
    <string name="basic_info_placeholder">Добавьте информацию о себе</string>
    <string name="illnesses_title">Заболевания</string>
    <string name="illnesses_placeholder">Укажите свои заболевания</string>
    <string name="symptoms_placeholder">Укажите свои жалобы</string>
    <string name="symptoms_title">Жалобы</string>
    <string name="choose_illnesses_title">Выберите заболевания</string>
    <string name="choose_symptoms_title">Выберите жалобы</string>
    <string name="choose_illnesses_hint">Введите название заболевания</string>
    <string name="choose_symptoms_hint">Введите название жалобы</string>
    <string name="filter_placeholder">Настройте рекомендации под себя</string>
    <string name="filter_title">Рекомендации</string>
    <string name="km">км.</string>
    <string name="m">м.</string>
    <string name="distance">Расстояние</string>
    <string name="from_to">От %s до %s</string>
    <string name="duration">Продолжительность</string>
    <string name="route_types_hint">Типы маршрутов</string>
    <string name="edit_filter_title">Настройте рекомендации</string>
    <string name="distance_hint">Расстояние</string>
    <string name="duration_hint">Продолжительность</string>
    <string name="grounds_hint">Типы покрытия</string>
    <string name="go_button">Пошли!</string>
    <string name="enter_details_end">Спасибо! Можете пользоваться приложением.</string>
    <string name="give_permission_title">Пожалуйста, дайте приложению разрешение на геолокацию</string>
    <string name="give_permission_message">Без него вы не сможете записывать ваши маршруты</string>
    <string name="route_too_short_title">Вы прошли слишком мало</string>
    <string name="route_too_short_message">Маршрут должен быть длинней.</string>
    <string name="speed_hint">Средняя скорость</string>
    <string name="speed">%s км/ч</string>
    <string name="kilocalories_burnt_hint">Ккал сожжено</string>
    <string name="kilocalories">%d ккал</string>
    <string name="altitude_delta_hint">Перепад высот</string>
    <string name="delete_button">Удалить</string>
    <string name="difficulty_hint">Сложность</string>
    <string name="route_title">Маршрут</string>
    <string name="entries_hint">Походы</string>
    <string name="start_entry_button">Начать прогулку</string>
    <string name="fill_basic_info">Заполните информацию о себе для подсчёта калорий</string>
    <string name="passed_hint">Пройден</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="new_entry_title">Новый поход</string>
    <string name="route_passed">Маршрут пройден!</string>
    <string name="route_not_passed">Маршрут не пройден</string>
    <string name="show_all">Показать всё (%d)</string>
    <string name="entry_title">Поход</string>
    <string name="date_hint">Дата</string>
    <string name="speed_too_fast_title">У вас слишком высокая скорость</string>
    <string name="speed_too_fast_message">Пожалуйста, не записывайте маршрут сидя в транспорте</string>
    <string name="entries_count_hint">Всего походов</string>
    <string name="type_walking">Ходьба</string>
    <string name="type_running">Бег</string>
    <string name="type_cycling">Велосипед</string>
    <string name="distance_to_route">%s от вас</string>
    <string name="collapse_button">Скрыть</string>
    <string name="routes_hint">Маршруты</string>
    <string name="search_routes_title">Поиск маршрута</string>
    <string name="search_routes_hint">Введите название маршрута</string>
    <string name="search_button">Искать</string>
    <string name="routing_title">Записывается маршрут</string>
    <string name="entrying_title">Записывается поход</string>
    <string name="notification_text">Не выключайте интернет и геолокацию.</string>
    <string name="notification_text_content">Продолжительность: %s\nРасстояние:        %s</string>
    <string name="route_hint">Маршрут</string>
    <string name="too_far_from_route_title">Вы слишком далеко от маршрута</string>
    <string name="too_far_from_route_message">Подойдите поближе к нему, чтобы продолжить.</string>
    <string name="channel_name">@string/app_name</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyByWF2iOBPBsy0u5SJnj-PMT8qkyUa62pA</string>
    <string name="permission_button">Дать доступ</string>
    <string name="give_permission_text">Остался лишь один шаг - дать доступ к вашей геолокации. Он нужен нам, чтобы записывать ваши маршруты. Ваша геолокация будет использоваться только пока работает приложение.</string>
    <string name="confirm_email_text">Мы отправили письмо на %s. Перейдите по ссылке для подтверждения почты.</string>
    <string name="invalid_email">Неправильный e-mail!</string>
    <string name="location_permission_title">Дайте доступ к геолокации</string>
    <string name="confirm_email_title">Подтвердите свой e-mail</string>
    <string name="strict_to_route">Напоминания о маршруте</string>
    <string name="strict_to_route_text">Не срезайте маршрут, чтобы ваш поход засчитался.</string>
    <string name="strict_to_route_title">Пожалуйста, не отходите далеко от маршрута</string>
    <string name="give_background_permission_title">Для правильной работы приложения ему нужен доступ к геолокации в фоне</string>
    <string name="give_background_permission_message">Выберите пункт %s в настройках</string>
    <string name="background_location_request_title">Пожалуйста, дайте доступ к геолокации в фоне</string>
    <string name="background_location_request_message">Для этого выберите опцию \'Разрешить в любом режиме\' на следующем меню</string>
    <plurals name="age">
        <item quantity="one">год</item>
        <item quantity="few">года</item>
        <item quantity="many">лет</item>
        <item quantity="other">лет</item>
    </plurals>
</resources>