<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search_routes_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_routes_hint" />

        <ImageButton
            android:id="@+id/edit_filter_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_filter" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_content"
        android:paddingTop="@dimen/padding_content"
        android:paddingBottom="@dimen/margin_content"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enabled_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/LetsFilterSwitch"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_hint"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/distance_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_content"
                android:text="@string/distance_hint"
                android:textColor="@color/grey"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/distance_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_hint"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/duration_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_content"
                android:text="@string/duration_hint"
                android:textColor="@color/grey"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/duration_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LetsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/route_types_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/types_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content"
            tools:itemCount="3" />

        <TextView
            style="@style/LetsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content"
            android:text="@string/grounds_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/grounds_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_content"
            tools:itemCount="3"
            tools:listitem="@layout/route_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/search_filter_button"
            style="@style/LetsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:paddingHorizontal="@dimen/padding_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>