<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingBottom="@dimen/margin_content">

    <View
        android:layout_width="@dimen/top_bottom_sheet_width"
        android:layout_height="@dimen/top_bottom_sheet_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_content"
        android:background="@color/grey" />

    <TextView
        style="@style/LetsTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:gravity="center"
        android:text="@string/new_entry_title" />

    <TextView
        android:id="@+id/passed_text_view"
        style="@style/LetsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content" />

    <me.kolotilov.lets_a_go.presentation.map.EntryStatsView
        android:id="@+id/entry_stats_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2" />

    <Button
        android:id="@+id/save_button"
        style="@style/LetsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/delete_button"
        style="@style/LetsTextButtonRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button" />

</LinearLayout>